# MachineACS

./: .gitignore  README.md
.claude/: settings.local.json
machineacs/: .pre-commit-config.yaml  api.py  cleaner.py  database.py  pyproject.toml  winget_results.txt
machineacs/adapters/: canonicalizer.py  format.py
machineacs/config/: __init__.py  registry.py  settings.json
machineacs/data/: dirty_data.csv  dirty_data.json  dirty_data.jsonl  dirty_data.txt  dirty_hr_data.csv  dirty_hr_data.json  dirty_hr_data.jsonl  dirty_hr_data.txt
machineacs/filters/: canonicalizer.py  generate_test_data.py  grammar.py  json_structurer.py  newlines.py  regex.py  schema_coercer.py  tokens.py  whitespace.py
machineacs/logs/: mypy_refactor.txt  pytest_debug.txt  pytest_error.txt  pytest_error_2.txt  pytest_error_3.txt  pytest_full.txt  pytest_tokens_debug.txt
machineacs/management/: README.md  pyproject.toml
machineacs/tests/: check_spell.py  conftest.py  debug_runner.py  debug_tokens.py  generate_dirty_data.py  generate_hr_data.py  test_adapters.py  test_csv_commas.py  test_filters.py  test_full_pipeline.py  test_integration.py  test_regex_fix.py
machineacs/the cool files/: api.py  cleaner.py  database.py  main.py
machineacs/utils/: io.py  json_structurer.py  logger.py  paths.py
