[project]
name = "machineacs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ijson>=3.4.0.post0",
    "mypy>=1.19.1",
    "pyspellchecker>=0.8.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
acs = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
